# diamondpeak-site

./: .gitignore  CLAUDE.md  CNAME  DESIGN.md  DESIGN_SETUP.md  _config.yml  cervia-wetsuit.html  ftp-calculator.html  fuelling-calculator.html  gear-ratio-calculator.html  giveaway-calculator.html  index.html  mhw-simulator.html  pacing-strategy-builder.html  power-to-weight.html  rag-study-v2.html  rag-study.html  random-number.html  recovery-analysis.html  run-pace-converter.html  should-you-wait.html  stamp-duty.html  student-loan.html  style.css  sweat-rate-calculator.html  triathlon-race-predictor.html  tss-calculator.html  vo2max-estimator.html
ClaudeCoach/ironman-analysis/: .gitignore  README.md  SKILL.md  conftest.py  pyproject.toml
ClaudeCoach/ironman-analysis/fixtures/: activities_2026_03_27_to_2026_04_25.json  april_14_duplicate.json  fitness_2026_01_25_to_2026_04_25.json
ClaudeCoach/ironman-analysis/primitives/: __init__.py  blueprint.py  compliance.py  debrief.py  env_pacing.py  load.py  modulation.py  nutrition.py  planned_tss.py  realised_tid.py  reoptimise.py  run_durability.py  validate_plan.py
ClaudeCoach/ironman-analysis/runs/: 2026-04-25-load-baseline.md
ClaudeCoach/ironman-analysis/schemas/: intervals_icu.md  training-blueprint.schema.json
ClaudeCoach/ironman-analysis/scripts/: modulate.py  reoptimise.py  run_baseline.py
ClaudeCoach/ironman-analysis/tests/: conftest.py  test_blueprint.py  test_bot_fastpath.py  test_compliance.py  test_daily_prescription.py  test_debrief.py  test_deload_taper.py  test_docs_paths.py  test_env_pacing.py  (+25 more)
(+225 files in other folders)
