[project]
name = "ironman-analysis"
version = "0.1.0"
description = "Training analysis primitives for Ironman Italy 2026 build"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.setuptools.packages.find]
where = ["."]
include = ["primitives*"]
